--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,5 +53,5 @@ add_subdirectory("Sources/HodEngine/Editor")
 add_subdirectory("Sources/HodEngine/Application")
 
 add_subdirectory("Sources/HodEngine")
-#add_subdirectory("Sources/GameApplication")
-#add_subdirectory("Sources/EditorApplication")
+add_subdirectory("Sources/GameApplication")
+add_subdirectory("Sources/EditorApplication")
