--- a/Sources/GameApplication/CMakeLists.txt
+++ b/Sources/GameApplication/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required(VERSION 3.4)
+cmake_minimum_required(VERSION 3.4...3.27)
+
+include(Global)
 
 project(GameApplication)
 
@@ -7,9 +9,17 @@ file(GLOB_RECURSE Srcs
 	"${PROJECT_SOURCE_DIR}/*.h"
 	"${PROJECT_SOURCE_DIR}/*.inl"
 )
-assign_source_group(${Srcs})
 
-add_executable(GameApplication ${Srcs})
+file(GLOB_RECURSE Includes
+"${PROJECT_SOURCE_DIR}/*.h"
+"${PROJECT_SOURCE_DIR}/*.inl"
+)
+
+assign_source_group(${Srcs}) # for VS
+
+add_executable(GameApplication ${Srcs} ${Includes})
+set_property(TARGET GameApplication PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
+
 #add_dependencies(HodEngine-Application Core DebugLayer ImGui Physics Application Renderer Game)
 #add_dependencies(HodEngine-Editor Core DebugLayer ImGui Physics Application Renderer Game)
 
@@ -22,19 +32,16 @@ set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT G
 #find_package(Glm REQUIRED)
 #find_package(Vulkan REQUIRED)
 
-if(MSVC)
-	#target_compile_options(HodEngine-Application PRIVATE /W4 /WX)
-	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MD")
-else()
-	#target_compile_options(HodEngine-Application PRIVATE -Wall -Wextra -pedantic -Werror)
-endif()
-
 include_directories(
 	".."
 	${Glm_INCLUDE_DIRS}
 	${Vulkan_INCLUDE_DIRS}
 )
 
+add_dependencies(GameApplication Engine)
+
 target_link_libraries(GameApplication
 	Engine
 )
+
+target_compile_definitions(GameApplication PUBLIC ${PLATFORM_DEFINE} ${RENDERER_DEFINE})
