--- a/Sources/HodEngine/Application/CMakeLists.txt
+++ b/Sources/HodEngine/Application/CMakeLists.txt
@@ -18,6 +18,7 @@ file(GLOB_RECURSE Includes
 assign_source_group(${Srcs}) # for VS
 
 add_library(Application OBJECT ${Srcs} ${Includes})
+set_property(TARGET Application PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
 add_dependencies(Application Core Window Renderer)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
