--- a/Sources/HodEngine/Editor/CMakeLists.txt
+++ b/Sources/HodEngine/Editor/CMakeLists.txt
@@ -20,6 +20,7 @@ assign_source_group(${Srcs}) # for VS
 find_package(Stb REQUIRED)
 
 add_library(Editor OBJECT ${Srcs} ${Includes})
+set_property(TARGET Editor PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
 add_dependencies(Editor Core ImGui Window Physics Renderer)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
