Linux wayland wip

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,31 @@
 	"configurations": [
 		{
 			"name": "(Linux) Launch",
+			"type": "lldb",
+			"request": "launch",
+			"program": "${command:cmake.launchTargetPath}",
+			"preLaunchTask": "Build target",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${workspaceFolder}/Data",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "lldb",
+			"setupCommands": [
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				},
+				{
+					"description": "Set Disassembly Flavor to Intel",
+					"text": "-gdb-set disassembly-flavor intel",
+					"ignoreFailures": true
+				}
+			]
+		},
+		{
+			"name": "(Linux gdb) Launch",
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${command:cmake.launchTargetPath}",
