Set WorkingDir = ExeDir/Data #7

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
 			"preLaunchTask": "Build target",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/Data",
+			//"cwd": "${workspaceFolder}/Data",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "lldb",
@@ -37,7 +37,7 @@
 			"preLaunchTask": "Build target",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/Data",
+			//"cwd": "${workspaceFolder}/Data",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "gdb",
@@ -62,7 +62,7 @@
 			"program": "${command:cmake.launchTargetPath}",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${workspaceFolder}/Data",
+			//"cwd": "${workspaceFolder}/Data",
 			"environment": [],
 			"console": "externalTerminal",
 			//"preLaunchTask": "Build HodEditor",
