--- a/Sources/HodEngine/Core/CMakeLists.txt
+++ b/Sources/HodEngine/Core/CMakeLists.txt
@@ -4,18 +4,7 @@ include(Global)
 
 project(Core)
 
-file(GLOB_RECURSE Srcs
-	"${PROJECT_SOURCE_DIR}/*.cpp"
-	"${PROJECT_SOURCE_DIR}/*.hpp"
-	"${PROJECT_SOURCE_DIR}/*.inl"
-	"${PROJECT_SOURCE_DIR}/*.h"
-)
-
-file(GLOB_RECURSE Includes
-	"${PROJECT_SOURCE_DIR}/*.hpp"
-	"${PROJECT_SOURCE_DIR}/*.inl"
-	"${PROJECT_SOURCE_DIR}/*.h"
-)
+CollectSourceFiles(${PROJECT_SOURCE_DIR} Srcs Includes)
 
 assign_source_group(${Srcs}) # for VS
 
