--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,3 +67,15 @@ add_subdirectory("Sources/HodEngine/Application")
 
 add_subdirectory("Sources/HodEngine")
 add_subdirectory("Sources/HodApplication")
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+add_subdirectory("Sources/Tests/Core")
