Improve AssetBrowser (fix widget + add builtins icons for folder and scene)

--- a/Sources/HodEngine/Editor/CMakeLists.txt
+++ b/Sources/HodEngine/Editor/CMakeLists.txt
@@ -6,6 +6,42 @@ project(Editor)
 
 CollectSourceFiles(${PROJECT_SOURCE_DIR} Srcs Includes)
 
+# Creates C resources file from files in given directory
+function(create_resources input output SourcesVar IncludeVar)
+	file(MAKE_DIRECTORY ${output})
+	# Iterate through input files
+  string(REGEX MATCH "([^/]+)$" filename ${input})
+  # Replace filename spaces & extension separator for C compatibility
+  string(REGEX REPLACE "\\.| |-" "_" variablename ${filename})
+  # Read hex data from file
+  file(READ ${input} filedata HEX)
+  # Convert hex data for C compatibility
+  string(REGEX REPLACE "([0-9a-f][0-9a-f])" "0x\\1," filedata ${filedata})
+  # Create output file
+  file(WRITE "${output}/${filename}.cpp" "#include <cstdint>\n\nnamespace hod\n{\n\tuint8_t ${variablename}[] = {${filedata}};\n\tuint32_t ${variablename}_size = sizeof(${variablename});\n}\n")
+  file(WRITE "${output}/${filename}.h" "#pragma once\n#include <cstdint>\n\nnamespace hod\n{\n\textern uint8_t ${variablename}[];\n\textern uint32_t ${variablename}_size;\n}\n")
+
+  set(${SourcesVar} "${output}/${filename}.cpp" PARENT_SCOPE)
+  set(${IncludeVar} "${output}/${filename}.h" PARENT_SCOPE)
+
+  message("Pack shader ${input}")
+endfunction()
+
+create_resources("Icons/folder.png" "Icons" IconSrcs IconIncludes)
+list(APPEND Srcs ${IconSrcs})
+list(APPEND Srcs ${IconIncludes})
+list(APPEND Includes ${IconIncludes})
+
+create_resources("Icons/folder-open.png" "Icons" IconSrcs IconIncludes)
+list(APPEND Srcs ${IconSrcs})
+list(APPEND Srcs ${IconIncludes})
+list(APPEND Includes ${IconIncludes})
+
+create_resources("Icons/landscape.png" "Icons" IconSrcs IconIncludes)
+list(APPEND Srcs ${IconSrcs})
+list(APPEND Srcs ${IconIncludes})
+list(APPEND Includes ${IconIncludes})
+
 assign_source_group(${Srcs}) # for VS
 
 find_package(Stb REQUIRED)
